--- a/index.html
+++ b/index.html
@@ -138,5 +138,32 @@
 
 
 
+
+
+
+
+
+
+
+
+    <div class="contact-container">
+        <div class="contactus">
+            <h1>Contact Us</h1>
+            <h2>Questions? we're here to help</h2>
+            <input type="text" placeholder="Your Message">
+            <button>Send Message</button>
+        </div>
+    </div>
+
+
+
+
+
+    
+
+
+
+
+
 </body>
 </html>
