Create Account Button
added functionality to the "Create Account" button, enabling it to slide to the "Create Account" section upon clicking.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2>Find your next memorable event.</h2>
          </div>
         
-            <button>Create Account</button>
+         <a id="CREATACC" href="#cacc">Create Account</a>
 
             <div class="HOME-VIDEO">
                 <video autoplay loop muted plays-inline>
@@ -94,6 +94,7 @@
 
 
 
+    <section id="cacc">
     <div class="creat-acc">
         <div>
             <h1>Create Account</h1>
@@ -133,6 +134,7 @@
 
 
     </div>
+    </section>
 
 
 
@@ -159,7 +161,7 @@
 
 
 
-    
+
 
 
 
