--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E7gzli</title>
-    <link href="Style.css" rel="stylesheet">
+    <link href="/public/Style.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,7 +49,7 @@
 
             <div class="HOME-VIDEO">
                 <video autoplay loop muted plays-inline>
-                    <source src="materials/videohomepage.mp4" type="video/mp4">       
+                    <source src="/public/materials/videohomepage.mp4" type="video/mp4">       
                     Your browser does not support the video tag.
                     </video>
             </div>
