--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          </div>
 
          <div class="R-A">
-            <a  href="index.html">Login</a>
+            <a  href="login.html">Login</a>
            </div>
     </div>
 
