--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
           <div class="left-A">
           <a  href="index.html">Home</a>
-          <a  href="index.html">Browse</a>
+          <a  href="Browse.html">Browse</a>
          </div>
 
          <div class="R-A">
