--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
     </div>
       <div class="left-A">
       <a  href="index.html">Home</a>
-      <a  href="Ticketing.html">Browse</a>
+      <a  href="Browse.html">Browse</a>
      </div>
 
      <div class="R-A">
