--- a/Browse.html
+++ b/Browse.html
@@ -77,7 +77,7 @@
                 </div>
                     <div class="button_dist">
                         <h4>Tickets remaining: 100 </h4>
-                        <a  class="booking-btn">Book Now</a>
+                        <a href="BookNow.html"  class="booking-btn">Book Now</a>
                     </div>
             </div>
         </div>
