--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E7gzli-Login</title>
   <link href="/public/login.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"rel="stylesheet">
@@ -38,8 +39,10 @@
     <form name="valform" method="POST" onsubmit="return validate()">
       <h1>Sign in</h1>
       <div class="inputs">
-      <div><input type="text" id="user"name="email" placeholder="Enter your email"></div>
-      <div><input type="password" id="pass"name="password" placeholder="Enter your password"></div>
+      <div><input type="text" id="user"name="email" placeholder="Enter your Email"></div>
+      <div class="password"><input type="password" id="pass"name="password" placeholder="Enter your Password">
+        <span class="password-toggle-icon"><i class="fas fa-eye" onclick="togglePasswordVisibility()"></i></span>
+      </div>
       <input type="submit" value="Login">
     </div>
     </form>
