Added the store page
added the html css and js of the store page which contain cards of the teams or bands when you click on it with small animation the user can see a brief history of the club or the band and  also if there a product they can buy

--- a/BookNow.html
+++ b/BookNow.html
@@ -27,6 +27,7 @@
           <div class="left-A">
           <a  href="index.html">Home</a>
           <a  href="Browse.html">Browse</a>
+          <a  href="Store.html">Store</a>
          </div>
 
          <div class="R-A">
