--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <div class="left-A">
           <a  href="index.html">Home</a>
           <a  href="Browse.html">Browse</a>
+          <a  href="Store.html">Store</a>
          </div>
 
          <div class="R-A">
