--- a/BookNow.html
+++ b/BookNow.html
@@ -91,7 +91,7 @@
 
 
         <div class="Buttons">
-        <a id="CN">Cancel</a>
+        <a href="Browse.html" id="CN">Cancel</a>
         <button id="BN">Buy Now</button>
         </div>
 
