--- a/Browse.html
+++ b/Browse.html
@@ -77,7 +77,7 @@
                     <span>Location: Cairo International Stadium</span>
                 </div>
                     <div class="button_dist">
-                        <h4>Tickets remaining: 100 </h4>
+                        <h3>Tickets remaining: 100 </h3>
                         <a href="BookNow.html"  class="booking-btn">Book Now</a>
                     </div>
             </div>
@@ -93,15 +93,15 @@
                     <img id="pic" src="/public/materials/PABLO'S EVENTS.jpg">
             </div>
             <div class="side_info">
-                <div class="info">
-                    <span>Title: Marawan Pablo Concert</span>
+                <div class="info2">
+                    <span>Title: Marawan Pablo Concert Experience an unforgettable day</span>
                     <span>(Ghaba)</span> <br>
                      <i class="fa-solid fa-calendar"></i>
                      <span>Date: 1/7/2024</span>     
                      <span>Location: Manara House</span>                
                 </div>
-                <div class="button_dist">
-                    <h4>Tickets remaining: 0 </h4>
+                <div class="button_dist2">
+                    <h3>Tickets remaining: 0 </h3>
                     <a id="finishbtn" class="booking-btn2">Booking Closed</a>
                 </div>
             </div>
