--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E7gzli</title>
     <link href="/public/Style.css" rel="stylesheet">
+    <script src="/public/script/loginval.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-
+<script src=""></script>
 </head>
 <body>
 
@@ -31,7 +32,7 @@
          </div>
 
          <div class="R-A">
-            <a  href="login.html">Login</a>
+            <a id="loginbutton"  href="login.html">Login</a>
            </div>
     </div>
 
@@ -46,7 +47,7 @@
             <h2>Find your next memorable event.</h2>
          </div>
         
-         <a id="CREATACC" href="#cacc">Create Account</a>
+         <a  id="CREATACC" href="#cacc">Create Account</a>
 
             <div class="HOME-VIDEO">
                 <video autoplay loop muted plays-inline>
@@ -127,7 +128,7 @@
 
                         <div class="holder">
                             <h3>Phone Number:</h1>
-                            <input type="Text" placeholder="&nbsp&nbsp&nbsp +020123456789">
+                            <input type="number" placeholder="&nbsp&nbsp&nbsp +020123456789">
                         </div>
 
 
