--- a/potm.html
+++ b/potm.html
@@ -153,15 +153,13 @@
               <p>Al Ahly Sc</p>
               <br>
               <p>
-                Ali Maaloul was born on January 1, 1990 in Sfax ,
+                Maaloul was born on January 1, 1990 in Sfax ,
                  Tunisia . He is a Tunisian football player who occupies
                  the position of left back .
                   He currently plays for the Egyptian Al-Ahly Club .
                   He participated with the Tunisian national team in the 
-                  2015 and 2017 African Cup of Nations and the 2018 World Cup . He won the title of top scorer in the Tunisian First Professional League in the 2015-16 season with Sfaxien Sports Club .
-
-
-
+                  2018 World Cup . He won the title of top scorer in Tunisian
+                  League in the 2015-16 season with Sfaxien.
               </p>
               <br>
               <p>
