Fixed Styles & added icon
Fixed styling in different css files like browse potm also added icon for all pages

--- a/Master.html
+++ b/Master.html
@@ -2,11 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title> Master </title>
+    <title>E7gzli-Master</title>
     <link rel="stylesheet" href="/public/Master.css">
     <script src="/public/script/Master.js"></script>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="icon" href="/public/materials/Icon.png" type="image/x-icon">
    </head>
 <body>
   <div class="sidebar">
