--- a/Admin.html
+++ b/Admin.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src ="public/script/adminScript.js" > </script>
-    <title>Document</title>
+    <link rel="icon" href="/public/materials/Icon.png" type="image/x-icon">
+    <title>E7gzli-Admin</title>
 </head>
 <body>
 <div class="header">
