--- a/BookNow.html
+++ b/BookNow.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<link rel="icon" href="/public/materials/Icon.png" type="image/x-icon">
 
 </head>
 <body>
@@ -31,7 +32,7 @@
          </div>
 
          <div class="R-A">
-            <a  href="login.html">Login</a>
+            <a id="loginbutton"  href="login.html">Login</a>
            </div>
     </div>
 
