--- a/Store.html
+++ b/Store.html
@@ -11,7 +11,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<link rel="icon" href="/public/materials/Icon.png" type="image/x-icon">
 <script src="/public/script/Store.js"></script>
+<script src="/public/script/loginval.js"></script>
 </head>
 <body>
 
@@ -31,7 +33,7 @@
          </div>
 
          <div class="R-A">
-            <a  href="login.html">Login</a>
+            <a id="loginbutton"  href="login.html">Login</a>
            </div>
     </div>
 
