--- a/potm.html
+++ b/potm.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<link rel="icon" href="/public/materials/Icon.png" type="image/x-icon">
 <script src="/public/script/potm.js"></script>
 </head>
 <body>
@@ -31,7 +32,7 @@
          </div>
 
          <div class="R-A">
-            <a id="loginbutton"  href="login.html">Login</a>
+          <a id="loginbutton"  href="login.html">Login</a>
            </div>
     </div>
     
@@ -40,7 +41,7 @@
 
     <div class="Starting-Home">
       <div class="Winner">
-        <h1>Last month Winner: Mohamed Abdelmonem</h1>
+        <h1>Last Month Winner: 👑Mohamed Abdelmonem👑</h1>
         <div class="winner-content">
           <img src="/public/materials/winner.jpg">
           <div class="stats">
