--- a/Browse.html
+++ b/Browse.html
@@ -61,7 +61,7 @@
 
 
 
-
+ 
 
 <div class="content-wrapper">
     <div class="content">
@@ -76,7 +76,7 @@
                     <span>Title: AHLY VS ZAMALEK</span> 
                     <span>WEEK 25 of EPL (DERPY)</span> <br>
                     <i class="fa-solid fa-calendar"></i>
-                    <span>Data:22/4/2024</span> 
+                    <span>Date: 22/4/2024</span> 
                     <span>Location: Cairo International Stadium</span>
                 </div>
                     <div class="button_dist">
