Fixed the cat drop down menu
the cat drop down menu was not working because of the payment style

--- a/BookNow.html
+++ b/BookNow.html
@@ -101,8 +101,8 @@
             <label id="PS" for="PS">Payment Style :</label>
             <select name="Payment" id="PS"  onchange="ps(this.value)">
                 <option disabled selected></option>
-                <option value="1">Cash</option>
-                <option value="2">Visa</option>
+                <option value="c">Cash</option>
+                <option value="v">Visa</option>
             </select>   
 
             <div class="output" id="output"></div>
