Fixed the file destination
Fixed the file destination for the github live hosting

--- a/BookNow.html
+++ b/BookNow.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E7gzli</title>
-    <link href="/public/BookNow.css" rel="stylesheet">
-    <script src="/public/script/BookNow.js"></script>
+    <link href="./public/BookNow.css" rel="stylesheet">
+    <script src="./public/script/BookNow.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-<link rel="icon" href="/public/materials/Icon.png" type="image/x-icon">
+<link rel="icon" href="./public/materials/Icon.png" type="image/x-icon">
 
 </head>
 <body>
@@ -44,7 +44,7 @@
     <div class="Area">
 
         <div class="stadium">
-        <img src="/public/materials/stadium-right.svg">
+        <img src="./public/materials/stadium-right.svg">
         </div>
 
         <div class="cat">
