--- a/Master.html
+++ b/Master.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title> Master </title>
-    <link rel="stylesheet" href="/public/Master.css">
-    <script src="/public/script/Master.js"></script>
+    <link rel="stylesheet" href="./public/Master.css">
+    <script src="./public/script/Master.js"></script>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
