--- a/MyAccount.html
+++ b/MyAccount.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E7gzli</title>
-    <script src="/public/script/MyAccount.js"></script>
-    <link href="/public/MyAccount.css" rel="stylesheet">
+    <script src="./public/script/MyAccount.js"></script>
+    <link href="./public/MyAccount.css" rel="stylesheet">
 </head>
 <body>
  
@@ -15,7 +15,7 @@
 	
 			<div class="logo">
 				<span class="logo-icon">
-					<img src="/public/materials/Icon.png" />
+					<img src="./public/materials/Icon.png" />
 				</span>
 				<h1 class="logo-title">
 					<span>E7gzli</span>
@@ -68,7 +68,7 @@
 		<div id="past-tickets" class="past-tickets">
             <div class="card">
                 <div class="side_img">
-                        <img id="pic" src="/public/materials/finishedevent.jpeg">
+                        <img id="pic" src="./public/materials/finishedevent.jpeg">
                 </div>
                 <div class="side_info">
                     <div class="info2">
