--- a/Browse.html
+++ b/Browse.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E7gzli</title>
-  <link href="/public/Browse.css" rel="stylesheet">
+  <link href="./public/Browse.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
@@ -15,8 +15,8 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="icon" href="/public/materials/Icon.png" type="image/x-icon">
-    <script src="/public/script/Browse.js"></script>
+    <link rel="icon" href="./public/materials/Icon.png" type="image/x-icon">
+    <script src="./public/script/Browse.js"></script>
     
     
  
@@ -68,7 +68,7 @@
         <!--card 1-->
         <div class="card">
             <div class="side_img">
-                    <img id="pic" src="/public/materials/AHLY_ZAMALEK.png">
+                    <img id="pic" src="./public/materials/AHLY_ZAMALEK.png">
             </div>
             <div class="side_info">
                 <div class="info">
@@ -93,7 +93,7 @@
         <div class="secndcard">
        <div class="card">
             <div class="side_img">
-                    <img id="pic" src="/public/materials/PABLO'S EVENTS.jpg">
+                    <img id="pic" src="./public/materials/PABLO'S EVENTS.jpg">
             </div>
             <div class="side_info">
                 <div class="info2">
