--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-<link rel="icon" href="/public/materials/Icon.png" type="image/x-icon">
+<link rel="icon" href="./public/materials/Icon.png" type="image/x-icon">
 </head>
 <body>
 
@@ -50,7 +50,7 @@
 
             <div class="HOME-VIDEO">
                 <video autoplay loop muted plays-inline>
-                    <source src="/public/materials/videohomepage.mp4" type="video/mp4">       
+                    <source src="./public/materials/videohomepage.mp4" type="video/mp4">       
                     Your browser does not support the video tag.
                     </video>
             </div>
@@ -273,24 +273,7 @@
                                 <option value="2023">2023</option>
                                 <option value="2024">2024</option>
                               </select>
-                            <!-- <h3>Date of Birth: </h3>
-                              <fieldset>
-                                <div class="field-inline-block">
-                                  <label>&nbspDD</label>
-                                  <input type="text" pattern="[0-9]*" maxlength="2" size="2" class="date-field" />
-                                </div>
-                                /
-                                <div class="field-inline-block">
-                                  <label>&nbspMM</label>
-                                  <input type="text" pattern="[0-9]*" maxlength="2" size="2" class="date-field" />
-                                </div>
-                                /
-                                <div class="field-inline-block">
-                                  <label>&nbspYYYY</label>
-                                  <input type="text" pattern="[0-9]*" maxlength="4" size="4" class="date-field date-field--year" />
-                                </div>
-                                
-                              </fieldset> -->
+
                         </div>
                         
 
