--- a/login.html
+++ b/login.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-  <script src="/public/script/loginval.js"></script>
+  <script src="./public/script/loginval.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E7gzli-Login</title>
-  <link href="/public/login.css" rel="stylesheet">
+  <link href="./public/login.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
   <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-  <link rel="icon" href="/public/materials/Icon.png" type="image/x-icon">
+  <link rel="icon" href="./public/materials/Icon.png" type="image/x-icon">
 </head>
 
 <body>
