--- a/potm.html
+++ b/potm.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E7gzli</title>
-    <link href="/public/potm.css" rel="stylesheet">
+    <link href="./public/potm.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-<link rel="icon" href="/public/materials/Icon.png" type="image/x-icon">
-<script src="/public/script/potm.js"></script>
+<link rel="icon" href="./public/materials/Icon.png" type="image/x-icon">
+<script src="./public/script/potm.js"></script>
 </head>
 <body>
 
@@ -43,7 +43,7 @@
       <div class="Winner">
         <h1>Last Month Winner: 👑Mohamed Abdelmonem👑</h1>
         <div class="winner-content">
-          <img src="/public/materials/winner.jpg">
+          <img src="./public/materials/winner.jpg">
           <div class="stats">
             <h2>⚽ Goals: 2 </h2>
             <h2>🥅 clean sheets: 5</h2>
@@ -72,7 +72,7 @@
     <div class="card-wrapper">
       <div class="card">
           <div class="card-front">
-              <img src="/public/materials/emamashour.jpg_large" alt="Player 1">
+              <img src="./public/materials/emamashour.jpg_large" alt="Player 1">
           </div>
           <div class="card-back">
               <h3>Emam Ashour (Egyptian)</h3>
@@ -110,7 +110,7 @@
       
         <div class="card">
             <div class="card-front">
-                <img src="/public/materials/zizo.jpg" alt="Player 2">
+                <img src="./public/materials/zizo.jpg" alt="Player 2">
             </div>
             <div class="card-back">
                 <h3>Ahmed Syaed Zizo (Egyptian)</h3>
@@ -147,7 +147,7 @@
          
       <div class="card">
           <div class="card-front">
-              <img src="/public/materials/maloul.jpg" alt="Player 3">
+              <img src="./public/materials/maloul.jpg" alt="Player 3">
           </div>
           <div class="card-back">
               <h3>Ali Maloul (Tunisian)</h3>
