--- a/Store.html
+++ b/Store.html
@@ -47,7 +47,7 @@
                 <div class="profile__banner" style="background-color: red;"></div>
                 <div>
                     <div class="profile__pic">
-                        <img src="/public/materials/Ahly.jpeg" alt="Team1">
+                        <img src="./public/materials/Ahly.jpeg" alt="Team1">
                     </div>
                     <div class="profile__info">
                         <span class="profile__info-display">Al Ahly sc</span>
