--- a/MyAccount.html
+++ b/MyAccount.html
@@ -122,6 +122,9 @@
             <div class="ticket created-by-anniedotexe">
 	<div class="left">
 		<div class="image">
+		
+				<img src="./public/materials/Wegz-f.jpg">
+			
 			<p class="admit-one">
 				<span></span>
 				<span></span>
