--- a/MyAccount.html
+++ b/MyAccount.html
@@ -6,6 +6,7 @@
     <title>E7gzli</title>
     <script src="./public/script/MyAccount.js"></script>
     <link href="./public/MyAccount.css" rel="stylesheet">
+	<link rel="icon" href="./public/materials/Icon.png" type="image/x-icon">
 </head>
 <body>
  
@@ -122,9 +123,6 @@
             <div class="ticket created-by-anniedotexe">
 	<div class="left">
 		<div class="image">
-		
-				<img src="./public/materials/Wegz-f.jpg">
-			
 			<p class="admit-one">
 				<span></span>
 				<span></span>
