--- a/Master.html
+++ b/Master.html
@@ -82,7 +82,7 @@
         <h6>&nbsp;</h6>
         <img src="/public/materials/user_man.jpg">
         <h4>Sam David</h4>
-        <p>Ui designer</p>
+        <p>🟢 Admin</p>
         <h6>&nbsp;</h6>
         <div class="test1">
           <form id="userDetailsForm"> 
@@ -105,7 +105,7 @@
         <h6>&nbsp;</h6>
         <img src="/public/materials/user_man.jpg">
         <h4>Balbina kherr</h4>
-        <p>Progammer</p>
+        <p>🟢 user</p>
         <h6>&nbsp;</h6>
         <div class="test1">
           <form id="userDetailsForm"> 
@@ -128,7 +128,7 @@
         <h6>&nbsp;</h6>
         <img src="/public/materials/user_man.jpg">
         <h4>Badan John</h4>
-        <p>tester</p>
+        <p>🟢 tester</p>
         <h6>&nbsp;</h6>
         <div class="test1">
           <form id="userDetailsForm"> 
@@ -140,7 +140,7 @@
                 <strong>Age:</strong> 39
             </div>
             <div>
-                <strong>Gender:</strong> Male
+                <strong>Gender:</strong> Female
             </div>
             <h3 id="text_card1">Press anywhere around the card to close</h3>
           </form>
@@ -151,7 +151,7 @@
         <h6>&nbsp;</h6>
         <img src="/public/materials/user_man.jpg">
         <h4>Salina micheal</h4>
-        <p>Ui designer</p>
+        <p>🟢 user</p>
         <h6>&nbsp;</h6>
         <div class="test1">
           <form id="userDetailsForm"> 
@@ -233,20 +233,20 @@
       </div>
     </section>
   </section>
-  <div class="history-container" id="userHistory">
-    <h2>User History</h2>
-    <ul>
-        <li>
-            <strong>Login Time:</strong> January 1, 2024 10:00 AM
-            <span class="ticket-status">Ticket1 Purchased: Yes</span>
-        </li>
-        <li>
-            <strong>Login Time:</strong> January 2, 2024 11:30 AM
-            <span class="ticket-status">Ticket2 Purchased: No</span>
-        </li>
-        <!-- add more login history here -->
-    </ul>
-</div>
+    <div class="history-container" id="userHistory">
+      <h2>User History</h2>
+      <ul>
+          <li>
+              <strong>Login Time:</strong> January 1, 2024 10:00 AM
+              <span class="ticket-status">Ticket1 Purchased: Yes</span>
+          </li>
+          <li>
+              <strong>Login Time:</strong> January 2, 2024 11:30 AM
+              <span class="ticket-status">Ticket2 Purchased: No</span>
+          </li>
+          <!-- add more login history here -->
+      </ul>
+    </div>
 
      
 </div>
