--- a/Master.html
+++ b/Master.html
@@ -80,7 +80,7 @@
     <div class="users">
       <div class="card">
         <h6>&nbsp;</h6>
-        <img src="/public/materials/user_man.jpg">
+        <img src="./public/materials/user_man.jpg">
         <h4>Sam Sulek</h4>
         <p>🟢 Admin</p>
         <h6>&nbsp;</h6>
@@ -103,7 +103,7 @@
       </div>
       <div class="card">
         <h6>&nbsp;</h6>
-        <img src="/public/materials/user_man.jpg">
+        <img src="./public/materials/user_man.jpg">
         <h4>David Goggins</h4>
         <p>🟢 user</p>
         <h6>&nbsp;</h6>
@@ -126,7 +126,7 @@
       </div>
       <div class="card">
         <h6>&nbsp;</h6>
-        <img src="/public/materials/user_man.jpg">
+        <img src="./public/materials/user_man.jpg">
         <h4>John Wick</h4>
         <p>🟢 tester</p>
         <h6>&nbsp;</h6>
@@ -149,7 +149,7 @@
       </div>
       <div class="card">
         <h6>&nbsp;</h6>
-        <img src="/public/materials/user_man.jpg">
+        <img src="./public/materials/user_man.jpg">
         <h4>Dwayne Johnson</h4>
         <p>🟢 user</p>
         <h6>&nbsp;</h6>
