--- a/Admin.html
+++ b/Admin.html
@@ -14,6 +14,7 @@
 <body>
 <div class="header">
 <p class="head"> Current Events </p>
+<a href="index.html" id="lo">Logout</a>
 </div>
     <div class="card">
         <div class="side_img">
