--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
   <link rel="icon" href="./public/materials/Icon.png" type="image/x-icon">
 </head>
 
-<body style="background-image: url(../public/materials/fan2.jpg);">
+<body>
   <div class="navbar">
     <div class="LOGO">
         <span class="material-symbols-outlined">
