master (user) page
I added another list called Incoming User's Requests to accept and reject the user request to create account and also if the user get rejected many times he could get banned

--- a/Master.html
+++ b/Master.html
@@ -240,6 +240,62 @@
           </table>
         </div>
       </section>
+      <section class="User">
+        <div class="Users-list">
+          <h1>Incoming User's Requests </h1>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Password</th>
+                <th>Accept Users</th>
+                <th>Reject Users</th>
+                <th>Ban</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>01</td>
+                <td>Sam David</td>
+                <td>Example@gmail.com</td>
+                <td>123456</td>
+                <td><button id="accept_but">Accept</button></td>
+                <td><button id="ban">Reject</button></td>
+                <td><button id="ban" onclick="toggleBan1()">Ban</button></td>
+              </tr>
+              <tr class="active">
+                <td>02</td>
+                <td>Balbina Kherr</td>
+                <td>Example@gmail.com</td>
+                <td>123456</td>
+                <td><button id="accept_but">Accept</button></td>
+                <td><button id="ban">Reject</button></td>
+                <td><button id="ban" onclick="toggleBan2()">Ban</button></td>
+              </tr>
+              <tr>
+                <td>03</td>
+                <td>Badan John</td>
+                <td>Example@gmail.com</td>
+                <td>123456</td>
+                <td><button id="accept_but">Accept</button></td>
+                <td><button id="ban">Reject</button></td>
+                <td><button id="ban" onclick="toggleBan3()">Ban</button></td>
+              </tr>
+              <tr>
+                <td>04</td>
+                <td>Sara David</td>
+                <td>Example@gmail.com</td>
+                <td>123456</td>
+                <td><button id="accept_but">Accept</button></td>
+                <td><button id="ban">Reject</button></td>
+                <td><button id="ban" onclick="toggleBan4()">Ban</button></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
     </section>
     <div class="history-container" id="userHistory1">
       <h2>User History</h2>
