--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E7gzli</title>
     <link href="./public/Style.css" rel="stylesheet">
+    <script src="./public/script/loginval.js"></script>
     <script src="./public/script/index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
